TIdy cross DC code.  The application and the solr module. (#4744)
(cherry picked from commit ae262ba33e4ebfbe92e0ba591b4d1ecee26e6890)